--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chai": "^4.2.0"
   },
   "workspaces": [
-    "./src/module/feature"
+    "./src/module/feature",
+    "./src/module/shared"
   ]
 }
