--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
@@ -50,16 +50,21 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.1.1",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/node-logger": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.11",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "autoprefixer": "^9",
     "better-docs": "^2.3.2",
     "chai": "^4.2.0",
     "jsdoc": "^3.6.6",
-    "react-styleguidist": "^11.1.5"
+    "postcss": "^7",
+    "react-styleguidist": "^11.1.5",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "workspaces": [
     "./src/module/feature",
