--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "check-types": "^11.1.2",
     "classnames": "^2.2.6",
     "immer": "^8.0.0",
     "miragejs": "^0.1.41",
